; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_tunnel.c_reset_timeout.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_tunnel.c_reset_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_tunnel_t = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_tunnel_t*)* @reset_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_timeout(%struct.st_h2o_tunnel_t* %0) #0 {
  %2 = alloca %struct.st_h2o_tunnel_t*, align 8
  store %struct.st_h2o_tunnel_t* %0, %struct.st_h2o_tunnel_t** %2, align 8
  %3 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %4 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %3, i32 0, i32 0
  %5 = call i32 @h2o_timer_unlink(i32* %4)
  %6 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %7 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %6, i32 0, i32 2
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %12 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.st_h2o_tunnel_t*, %struct.st_h2o_tunnel_t** %2, align 8
  %15 = getelementptr inbounds %struct.st_h2o_tunnel_t, %struct.st_h2o_tunnel_t* %14, i32 0, i32 0
  %16 = call i32 @h2o_timer_link(i32 %10, i32 %13, i32* %15)
  ret void
}

declare dso_local i32 @h2o_timer_unlink(i32*) #1

declare dso_local i32 @h2o_timer_link(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
